--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
         "@headlessui/vue": "^1.7.3",
         "@heroicons/vue": "^2.0.12",
         "@vueuse/core": "^9.3.1",
+        "axios": "^1.1.3",
         "pinia": "^2.0.23",
         "vue": "^3.2.37",
         "vue-router": "4",
