--- a/server/package.json
+++ b/server/package.json
@@ -26,12 +26,15 @@
         "dev": "nodemon src/index.js"
     },
     "dependencies": {
-        "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.1",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
+        "crypto": "^1.0.1",
         "express": "^4.18.2",
+        "helmet": "^6.0.0",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^6.7.2"
+        "mongoose": "^6.7.2",
+        "morgan": "^1.10.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.20"
