--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Logs
-logs
-*.log
+*/logs/*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -23,4 +22,4 @@ dist-ssr
 *.sw?
 
 # Docker
-*/.docker/mongo
+*/docker/mongo
