--- a/server/package.json
+++ b/server/package.json
@@ -20,10 +20,10 @@
         "url": "https://github.com/thuongtruong1009/metasave/issues"
     },
     "homepage": "https://github.com/thuongtruong1009/metasave",
-    "main": "src/index.js",
+    "main": "src/app.js",
     "scripts": {
-        "start": "node src/index.js",
-        "dev": "nodemon src/index.js"
+        "start": "node src/app.ts",
+        "dev": "nodemon src/app.ts"
     },
     "dependencies": {
         "body-parser": "^1.20.1",
@@ -37,6 +37,10 @@
         "morgan": "^1.10.0"
     },
     "devDependencies": {
-        "nodemon": "^2.0.20"
+        "@types/express": "^4.17.14",
+        "@types/node": "^18.11.9",
+        "nodemon": "^2.0.20",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.8.4"
     }
 }
