--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -8,12 +8,12 @@ services:
       - .env
     build:
       context: .
-      dockerfile: ./.docker/Dockerfile
+      dockerfile: ./docker/Dockerfile
     ports:
       - 3000:3000
     volumes:
       - .:/app
-    command: yarn dev
+    command: yarn start
     networks:
       - mongo-network
     depends_on:
@@ -26,7 +26,7 @@ services:
     ports:
       - 27017:27017
     volumes:
-      - ./.docker/mongo/data:/data/db
+      - ./docker/mongo/data:/data/db
     networks:
       - mongo-network
     restart: unless-stopped
