--- a/server/package.json
+++ b/server/package.json
@@ -20,10 +20,12 @@
         "url": "https://github.com/thuongtruong1009/metasave/issues"
     },
     "homepage": "https://github.com/thuongtruong1009/metasave",
-    "main": "src/app.js",
+    "main": "dist/app.js",
     "scripts": {
-        "start": "node src/app.ts",
-        "dev": "nodemon src/app.ts"
+        "start": "node /app/dist/app.js",
+        "dev": "nodemon src/app.ts",
+        "prod": "node dist/app.js",
+        "build": "tsc --build"
     },
     "dependencies": {
         "body-parser": "^1.20.1",
@@ -37,7 +39,11 @@
         "morgan": "^1.10.0"
     },
     "devDependencies": {
+        "@types/cookie-parser": "^1.4.3",
+        "@types/cors": "^2.8.12",
         "@types/express": "^4.17.14",
+        "@types/jsonwebtoken": "^8.5.9",
+        "@types/morgan": "^1.9.3",
         "@types/node": "^18.11.9",
         "nodemon": "^2.0.20",
         "ts-node": "^10.9.1",
