--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
+*/pnpm-debug.log*
 lerna-debug.log*
 
 */node_modules
@@ -25,3 +25,6 @@ dist-ssr
 */docker/mongo
 
 */dist
+
+!*/**/.gitkeep
+!*/**/.gitkeep
