build: seed role-tag-user

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,6 @@
 APP_PORT=3000
-MONGO_URL="mongodb://mongo/example"
+
+DB_NAME=metasave
+MONGO_URL="mongodb://localhost:27017/metasave"
+
 NODE_ENV=development
