--- a/server/package.json
+++ b/server/package.json
@@ -25,14 +25,17 @@
         "start": "node /app/dist/app.js",
         "dev": "nodemon src/app.ts",
         "prod": "node dist/app.js",
-        "build": "tsc --build"
+        "build": "tsc --build",
+        "seed": "ts-node seeder/index.ts"
     },
     "dependencies": {
         "body-parser": "^1.20.1",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "crypto": "^1.0.1",
+        "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "faker": "^6.6.6",
         "helmet": "^6.0.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.7.2",
