--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@headlessui/vue": "^1.7.3",
         "@heroicons/vue": "^2.0.12",
+        "@iconify/vue": "^4.0.0",
         "@vueuse/core": "^9.3.1",
         "axios": "^1.1.3",
         "pinia": "^2.0.23",
