--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,10 @@
         "@types/node": "^18.11.3",
         "@vitejs/plugin-vue": "^3.1.0",
         "autoprefixer": "^10.4.12",
+        "node-sass": "^8.0.0",
         "postcss": "^8.4.18",
+        "sass": "^1.56.1",
+        "sass-loader": "^13.2.0",
         "tailwindcss": "^3.2.1",
         "ts-node": "^10.9.1",
         "typescript": "^4.6.4",
