--- a/server/.dockerignore
+++ b/server/.dockerignore
@@ -1,4 +1,16 @@
-node_modules
+# ignore .git and .cache folders
+.git
+.gitignore
+.cache
+
+# ignore all markdown files (md) beside all README*.md other than README-secret.md
+*.md
+!README*.md
+README-secret.md
+
+#ignore node_modules and all subdirectories
+node_modules/
 npm-debug.log
+
 Dockerfile
 .dockerignore
