--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,9 @@
         "dev": "nodemon src/app.ts",
         "prod": "node dist/app.js",
         "build": "tsc --build",
-        "seed": "ts-node seeder/index.ts"
+        "ngrok": "ngrok http 8080",
+        "seed": "ts-node seeder/index.ts",
+        "rome": "npx rome check . && npx rome format ."
     },
     "dependencies": {
         "body-parser": "^1.20.1",
