chore: config ngrok

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,8 +1,11 @@
 APP_PORT=3000
 
 DB_NAME=metasave
-MONGO_URL="mongodb://localhost:27017/metasave"
+
+MONGO_URL=
 
 NODE_ENV=development
 
-SECRET_KEY=metasave-secret-key
+SECRET_KEY=
+
+NGROK_AUTH_TOKEN=
