--- a/server/.env
+++ b/server/.env
@@ -1,11 +1,11 @@
 APP_PORT=3000
 
 DB_NAME=metasave
-# MONGO_URL="mongodb://0.0.0.0:27017/metasave"
+# MONGO_URL="mongodb://localhost:27017/metasave"
 MONGO_URL="mongodb+srv://pattlactroi:pattlactroi@cluster0.0r02fd6.mongodb.net/metasave?retryWrites=true&w=majority"
 
 NODE_ENV=development
 
 SECRET_KEY=metasave-secret-key
 
-NGROK_AUTH_TOKEN=2IDydaTezI8par5UAUanUO5D3IV_6vVGMZNxzgVfbJrTzQAjf
+NGROK_AUTH_TOKEN="2IDydaTezI8par5UAUanUO5D3IV_6vVGMZNxzgVfbJrTzQAjf"
