--- a/server/.env.production
+++ b/server/.env.production
@@ -1,9 +1,8 @@
 APP_PORT=3000
 
-DB_NAME=metasave
-MONGO_URL="mongodb://localhost:27017/metasave"
+MONGO_URL="mongodb+srv://pattlactroi:pattlactroi@cluster0.0r02fd6.mongodb.net/metasave?retryWrites=true&w=majority"
 
-NODE_ENV=development
+NODE_ENV=production
 
 ORIGIN=http://localhost:3001
 
