feat: send email with nodemailer

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
 APP_PORT=3000
+APP_URL=http://localhost:3000
 
 DB_NAME=metasave
 MONGO_URL="mongodb://localhost:27017/metasave"
@@ -10,3 +11,12 @@ ORIGIN=http://localhost:3001
 SECRET_KEY=metasave-secret-key
 
 NGROK_AUTH_TOKEN="2IDydaTezI8par5UAUanUO5D3IV_6vVGMZNxzgVfbJrTzQAjf"
+
+# Email
+EMAIL_USERNAME=pattlactroi@gmail.com
+EMAIL_PASSWORD=bestemail@1009
+
+# Google
+GOOGLE_CLIENT_ID=250135506142-2iud0eckdpitsfb1jtcaodhul4jq3j4l.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_REFRESH_TOKEN=1//04ukjd3QM5nMCCgYIARAAGAQSNwF-L9Irr5YZsLCn5XCVoPpOiBSFqLha2I5wmvVUMSEM7iZBeYQ5Xi3cUbxLhBq-aSV51rWeBVo
