--- a/server/package.json
+++ b/server/package.json
@@ -39,7 +39,8 @@
         "helmet": "^6.0.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.7.2",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "nodemailer": "^6.8.0"
     },
     "devDependencies": {
         "@types/cookie-parser": "^1.4.3",
@@ -48,6 +49,7 @@
         "@types/jsonwebtoken": "^8.5.9",
         "@types/morgan": "^1.9.3",
         "@types/node": "^18.11.9",
+        "@types/nodemailer": "^6.4.6",
         "nodemon": "^2.0.20",
         "ts-node": "^10.9.1",
         "typescript": "^4.8.4"
