--- a/server/docker/Dockerfile
+++ b/server/docker/Dockerfile
@@ -1,26 +1,15 @@
-FROM node:18-alpine as build-stage
+FROM node:18-alpine as development
 
 WORKDIR /app
 
-COPY . .
+COPY package*.json ./
 
 RUN yarn
 
+COPY . .
+
+FROM development as production
+
+ENV NODE_PATH=./dist
+
 RUN yarn build
-
-FROM node:18-alpine as production-stage
-
-WORKDIR /app
-
-RUN chown -R node:node /app
-
-USER node
-
-RUN mkdir dist
-
-COPY --chown=node:node ./package.json ./yarn.lock ./
-
-COPY --chown=node:node --from=build-stage /app/dist /app/dist
-
-RUN yarn --production
-
