--- a/server/.env
+++ b/server/.env
@@ -1,8 +1,10 @@
 APP_PORT=3000
-APP_URL=http://localhost:3000
+APP_URL=http://localhost:${APP_PORT}
 
-DB_NAME=metasave
-MONGO_URL="mongodb://localhost:27017/metasave"
+# Database
+DB_NAME=boarder
+MONGO_URL=mongodb://localhost:27017/boarder
+ATLAS_URL=mongodb+srv://pattlactroi:pattlactroi@cluster0.0r02fd6.mongodb.net/boarder?retryWrites=true&w=majority
 
 NODE_ENV=development
 
@@ -10,7 +12,7 @@ ORIGIN=http://localhost:3001
 
 SECRET_KEY=metasave-secret-key
 
-NGROK_AUTH_TOKEN="2IDydaTezI8par5UAUanUO5D3IV_6vVGMZNxzgVfbJrTzQAjf"
+NGROK_AUTH=2IDydaTezI8par5UAUanUO5D3IV_6vVGMZNxzgVfbJrTzQAjf
 
 # Email
 EMAIL_USERNAME=pattlactroi@gmail.com
