--- a/server/package.json
+++ b/server/package.json
@@ -1,32 +1,13 @@
 {
-    "name": "metasave-server",
+    "name": "boarder",
     "version": "1.0.0",
+    "main": "index.js",
     "license": "MIT",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/thuongtruong1009/metasave.git"
-    },
-    "keywords": [
-        "node",
-        "metasave",
-        "express",
-        "mongodb",
-        "github",
-        "docker",
-        "javascript"
-    ],
-    "author": "Tran Nguyen Thuong Truong <thuongtruong1009@proton.me>",
-    "bugs": {
-        "url": "https://github.com/thuongtruong1009/metasave/issues"
-    },
-    "homepage": "https://github.com/thuongtruong1009/metasave",
-    "main": "dist/app.js",
     "scripts": {
-        "start": "node /app/dist/app.js",
-        "dev": "nodemon src/app.ts",
-        "prod": "node dist/app.js",
-        "build": "tsc --build",
-        "seed": "ts-node seeder/index.ts"
+        "start": "NODE_PATH=./dist node dist/index.js",
+        "build": "tsc -p .",
+        "dev": "nodemon src/index.ts",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
         "body-parser": "^1.20.1",
@@ -35,10 +16,9 @@
         "crypto": "^1.0.1",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
-        "faker": "^6.6.6",
-        "helmet": "^6.0.0",
+        "helmet": "^6.0.1",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^6.7.2",
+        "mongoose": "^6.7.5",
         "morgan": "^1.10.0",
         "nodemailer": "^6.8.0"
     },
@@ -48,10 +28,10 @@
         "@types/express": "^4.17.14",
         "@types/jsonwebtoken": "^8.5.9",
         "@types/morgan": "^1.9.3",
-        "@types/node": "^18.11.9",
+        "@types/node": "^18.11.10",
         "@types/nodemailer": "^6.4.6",
         "nodemon": "^2.0.20",
         "ts-node": "^10.9.1",
-        "typescript": "^4.8.4"
+        "typescript": "^4.9.3"
     }
 }
