--- a/server/package.json
+++ b/server/package.json
@@ -10,26 +10,33 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
-        "body-parser": "^1.20.1",
+        "compression": "^1.7.4",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
-        "crypto": "^1.0.1",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "helmet": "^6.0.1",
+        "hpp": "^0.2.3",
         "jsonwebtoken": "^8.5.1",
+        "module-alias": "^2.2.2",
         "mongoose": "^6.7.5",
         "morgan": "^1.10.0",
-        "nodemailer": "^6.8.0"
+        "nodemailer": "^6.8.0",
+        "swagger-jsdoc": "^6.2.5",
+        "swagger-ui-express": "^4.6.0"
     },
     "devDependencies": {
+        "@types/compression": "^1.7.2",
         "@types/cookie-parser": "^1.4.3",
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.14",
+        "@types/hpp": "^0.2.2",
         "@types/jsonwebtoken": "^8.5.9",
         "@types/morgan": "^1.9.3",
         "@types/node": "^18.11.10",
         "@types/nodemailer": "^6.4.6",
+        "@types/swagger-jsdoc": "^6.0.1",
+        "@types/swagger-ui-express": "^4.1.3",
         "nodemon": "^2.0.20",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.3"
