--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "fs-extra": "^11.1.0",
         "helmet": "^6.0.1",
         "hpp": "^0.2.3",
         "jsonwebtoken": "^8.5.1",
@@ -23,13 +24,16 @@
         "morgan": "^1.10.0",
         "nodemailer": "^6.8.0",
         "swagger-jsdoc": "^6.2.5",
-        "swagger-ui-express": "^4.6.0"
+        "swagger-ui-express": "^4.6.0",
+        "winston": "^3.8.2",
+        "winston-daily-rotate-file": "^4.7.1"
     },
     "devDependencies": {
         "@types/compression": "^1.7.2",
         "@types/cookie-parser": "^1.4.3",
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.14",
+        "@types/fs-extra": "^9.0.13",
         "@types/hpp": "^0.2.2",
         "@types/jsonwebtoken": "^8.5.9",
         "@types/morgan": "^1.9.3",
