--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
         "@vuepic/vue-datepicker": "^3.5.3",
         "@vueuse/core": "^9.3.1",
         "axios": "^1.1.3",
+        "html2canvas": "^1.4.1",
         "nprogress": "^0.2.0",
         "pinia": "^2.0.23",
         "vue": "^3.2.37",
