--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
         "@vuepic/vue-datepicker": "^3.5.3",
         "@vueuse/core": "^9.3.1",
         "axios": "^1.1.3",
+        "fs-extra": "^11.1.0",
         "html2canvas": "^1.4.1",
         "nprogress": "^0.2.0",
         "pinia": "^2.0.23",
@@ -22,6 +23,7 @@
         "vue3-smooth-dnd": "^0.0.2"
     },
     "devDependencies": {
+        "@types/fs-extra": "^9.0.13",
         "@types/node": "^18.11.3",
         "@types/nprogress": "^0.2.0",
         "@vitejs/plugin-vue": "^3.1.0",
