--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
         "@vuepic/vue-datepicker": "^3.5.3",
         "@vueuse/core": "^9.3.1",
         "axios": "^1.1.3",
+        "dayjs": "^1.11.7",
         "fs-extra": "^11.1.0",
         "html2canvas": "^1.4.1",
         "nprogress": "^0.2.0",
