--- a/server/.env
+++ b/server/.env
@@ -6,17 +6,17 @@ NODE_ENV=development
 ORIGIN=http://localhost:3001
 
 # Token
-ACCESS_TOKEN_KEY=boarder-secret-key
+ACCESS_TOKEN_KEY=metasave-secret-key
 ACCESS_TOKEN_LIFE=1d
-REFRESH_TOKEN_KEY=border-refresh-key
+REFRESH_TOKEN_KEY=metasave-refresh-key
 REFRESH_TOKEN_LIFE=365d
 
 # Ngrok
 NGROK_AUTH=2IDydaTezI8par5UAUanUO5D3IV_6vVGMZNxzgVfbJrTzQAjf
 
 # Database
-DB_NAME=boarder
-MONGO_URL=mongodb://localhost:27017/boarder
+DB_NAME=metasave
+MONGO_URL=mongodb://localhost:27017/metasave
 ATLAS_URL=mongodb+srv://pattlactroi:pattlactroi@cluster0.0r02fd6.mongodb.net/boarder?retryWrites=true&w=majority
 
 # Email
