--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3.8"
 services:
   app:
     container_name: app
+    image: metasave-api:latest
     build:
       context: .
       dockerfile: ./docker/Dockerfile
