--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,7 +7,6 @@
     "outDir": "dist",
     "strict": true,
     "moduleResolution": "node",
-    "baseUrl": "./src",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
@@ -19,10 +18,14 @@
     "emitDecoratorMetadata": true,
     "resolveJsonModule": true,
     "rootDir": "./",
+    "baseUrl": "./src",
     "removeComments": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "typeRoots": ["src/types", "node_modules/@types"]
+    "typeRoots": ["src/types", "node_modules/@types"],
+    "paths": {
+      "*": ["node_modules/*", "src/types/*"]
+    }
   },
   "include": ["src/**/*.ts", "src/**/*.json", ".env"],
   "exclude": ["node_modules", "http", "logs", "src/tests"]
