feat: update compose script

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     container_name: app
     image: metasave-api:latest
     build:
-      context: .
-      dockerfile: ./docker/Dockerfile
+      context: docker
+      dockerfile: Dockerfile
       target: development
     ports:
       - 3000:${APP_PORT}
