build: update action

--- a/server/docker/Dockerfile
+++ b/server/docker/Dockerfile
@@ -2,7 +2,7 @@ FROM node:18-alpine as development
 
 WORKDIR /app
 
-COPY package*.json ./
+COPY ./server/package*.json ./
 
 RUN yarn
 
@@ -17,7 +17,7 @@ RUN yarn build
 LABEL "maintainer"="thuongtruong1009 <thuongtruongofficial@gmail.com>"
 LABEL "org.opencontainers.image.authors"="Thuong Truong <"
 LABEL "org.opencontainers.image.version"="1.0"
-LABEL "org.opencontainers.image.description"="Official Docker Image of Boarder API application"
+LABEL "org.opencontainers.image.description"="Official Docker Image of Metasave API application"
 LABEL "org.opencontainers.image.licenses"="MIT"
-LABEL "org.opencontainers.image.source"="https://github.com/thuongtruong1009/boarder/server"
-LABEL "org.opencontainers.image.documentation"="https://thuongtruong1009.github.io/api-docs"
+LABEL "org.opencontainers.image.source"="https://github.com/thuongtruong1009/metasave/server"
+LABEL "org.opencontainers.image.documentation"="https://thuongtruong1009.github.io/docs"
