--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     container_name: app
     image: metasave-api:latest
     build:
-      context: docker
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: ./docker/Dockerfile
       target: development
     ports:
       - 3000:${APP_PORT}
