--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,16 +1,16 @@
 {
     "version": 2,
     "builds": [{
-        "src": "dist/index.js",
+        "src": "/dist/src/index.js",
         "use": "@vercel/node",
         "config": {
             "includeFiles": [
-                "dist/**"
+                "/dist/**"
             ]
         }
     }],
     "routes": [{
         "src": "/(.*)",
-        "dest": "dist/index.js"
+        "dest": "/dist/src/index.js"
     }]
 }
