--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -3,7 +3,8 @@ version: "3.8"
 services:
   app:
     container_name: app
-    image: metasave-api:latest
+    # image: metasave-api:latest
+    image: ghcr.io/thuongtruong1009/metasave-api:main
     build:
       context: .
       dockerfile: ./docker/Dockerfile
@@ -11,7 +12,7 @@ services:
     ports:
       - 3000:${APP_PORT}
     volumes:
-      - ./:/app
+      - .:/app
     networks:
       - common
     depends_on:
