--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
     "main": "index.js",
     "license": "MIT",
     "scripts": {
-        "start": "node dist/index.js",
+        "start": "node dist/src/index.js",
         "build": "tsc -p .",
         "dev": "nodemon src/index.ts",
         "test": "echo \"Error: no test specified\" && exit 1"
