--- a/server/package.json
+++ b/server/package.json
@@ -41,6 +41,7 @@
         "@types/nodemailer": "^6.4.6",
         "@types/swagger-jsdoc": "^6.0.1",
         "@types/swagger-ui-express": "^4.1.3",
+        "jest": "^29.3.1",
         "nodemon": "^2.0.20",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.3"
