--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "firebase-functions": "^4.1.1",
         "fs-extra": "^11.1.0",
         "helmet": "^6.0.1",
         "hpp": "^0.2.3",
