--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,9 @@
-name: github pages
+name: Build page (api)
 
 on:
     push:
         branches:
-        - master
+        - main
 
 jobs:
     deploy:
@@ -14,7 +14,7 @@ jobs:
         - name: Setup Node
             uses: actions/setup-node@v2-beta
             with:
-            node-version: '12'
+            node-version: '16'
 
         - name: Get yarn cache
             id: yarn-cache
@@ -27,6 +27,8 @@ jobs:
             key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
             restore-keys: |
                 ${{ runner.os }}-yarn-
+        - run: |
+            cd server
         - run: yarn install --frozen-lockfile
         - run: yarn build
             env:
