--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
         "start": "node dist/src/index.js",
         "build": "tsc -p .",
         "dev": "nodemon src/index.ts",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest src/test/app.test.js"
     },
     "dependencies": {
         "compression": "^1.7.4",
@@ -43,6 +43,7 @@
         "@types/swagger-ui-express": "^4.1.3",
         "jest": "^29.3.1",
         "nodemon": "^2.0.20",
+        "supertest": "^6.3.3",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.3"
     }
