--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,41 +1,36 @@
 name: Build page (api)
-
 on:
-    push:
-        branches:
-        - main
+  push:
+    branches: main
+    paths-ignore:
+      - "**.md"
+
+  pull_request:
+    branches: main
+    paths-ignore:
+      - "**.md"
 
 jobs:
-    deploy:
-        runs-on: ubuntu-18.04
-        steps:
-        - uses: actions/checkout@v2
+  build-deploy:
+    runs-on: ubuntu-latest
 
-        - name: Setup Node
-            uses: actions/setup-node@v2-beta
-            with:
-            node-version: '16'
+    steps:
+      - name: Checkout 🛎️
+        uses: actions/checkout@master
+        with:
+          persist-credentials: false
 
-        - name: Get yarn cache
-            id: yarn-cache
-            run: echo "::set-output name=dir::$(yarn cache dir)"
+      - name: Install 🔧
+        run: |
+          cd server
+          yarn install
+          yarn build
+        env:
+          NODE_ENV: production
 
-        - name: Cache dependencies
-            uses: actions/cache@v2
-            with:
-            path: ${{ steps.yarn-cache.outputs.dir }}
-            key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-            restore-keys: |
-                ${{ runner.os }}-yarn-
-        - run: |
-            cd server
-        - run: yarn install --frozen-lockfile
-        - run: yarn build
-            env:
-            REACT_APP_GIT_SHA: ${{ github.SHA }}
-
-        - name: Deploy
-            uses: peaceiris/actions-gh-pages@v3
-            with:
-            github_token: ${{ secrets.GITHUB_TOKEN }}
-            publish_dir: ./build
+      - name: Deploy to GH Pages 🚀
+        if: ${{ github.event_name != 'pull_request' }}
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: dist
