--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
-name: Build page (api)
+name: Build api
+
 on:
   push:
     branches: main
@@ -18,7 +19,7 @@ jobs:
       - name: Install 🔧
         run: |
           cd server
-          yarn install
+          yarn
           yarn build
         env:
           NODE_ENV: production
