ci: update action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
       - "**.md"
 
 jobs:
-  build:
+  build-api:
     runs-on: windows-latest
     defaults:
       run:
@@ -21,9 +21,6 @@ jobs:
 
       - name: Install 🔧
         run: yarn install
-
-      - name: Lint 🧐
-        run: yarn lint:check
 
       - name: Build 🏗️
         run: yarn build
