--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,9 @@
         "module-alias": "^2.2.2",
         "mongoose": "^6.7.5",
         "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.8.0",
+        "sharp": "^0.31.3",
         "swagger-jsdoc": "^6.2.5",
         "swagger-ui-express": "^4.6.0",
         "winston": "^3.8.2",
@@ -37,8 +39,10 @@
         "@types/hpp": "^0.2.2",
         "@types/jsonwebtoken": "^8.5.9",
         "@types/morgan": "^1.9.3",
+        "@types/multer": "^1.4.7",
         "@types/node": "^18.11.10",
         "@types/nodemailer": "^6.4.6",
+        "@types/sharp": "^0.31.0",
         "@types/swagger-jsdoc": "^6.0.1",
         "@types/swagger-ui-express": "^4.1.3",
         "jest": "^29.3.1",
