--- a/server/ngrok.yml
+++ b/server/ngrok.yml
@@ -1,4 +1,11 @@
-# docker run -it -e NGROK_AUTHTOKEN=<your_token> ngrok/ngrok http <your_ip>:3000
+# docker run -it -e NGROK_AUTHTOKEN=2IDydaTezI8par5UAUanUO5D3IV_6vVGMZNxzgVfbJrTzQAjf -e NGROK_CONFIG=/ngrok.yaml ngrok/ngrok:alpine http --host-header=rewrite 4040
+
 authtoken: 2IDydaTezI8par5UAUanUO5D3IV_6vVGMZNxzgVfbJrTzQAjf
 log: stdout
-web_addr: 0.0.0.0:4040
+region: jp
+version: 2
+web_addr: 127.0.0.1:4040
+tunnels:
+  app:
+    addr: app:3000
+    proto: http
