--- a/server/package.json
+++ b/server/package.json
@@ -15,15 +15,18 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "express-rate-limit": "^6.7.0",
         "fs-extra": "^11.1.0",
         "helmet": "^6.0.1",
         "hpp": "^0.2.3",
         "jsonwebtoken": "^9.0.0",
         "module-alias": "^2.2.2",
+        "moment": "^2.29.4",
         "mongoose": "^6.7.5",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.8.0",
+        "redis": "^4.5.1",
         "sharp": "^0.31.3",
         "swagger-jsdoc": "^6.2.5",
         "swagger-ui-express": "^4.6.0",
