--- a/server/.env
+++ b/server/.env
@@ -3,7 +3,7 @@ APP_URL=http://localhost:${APP_PORT}
 
 NODE_ENV=development
 
-ORIGIN=http://localhost:3001
+ORIGIN='http://localhost:3000,http://localhost:3001'
 
 # Token
 ACCESS_TOKEN_KEY=metasave-secret-key
