--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
         "helmet": "^6.0.1",
         "hpp": "^0.2.3",
         "jsonwebtoken": "^9.0.0",
+        "mailgen": "^2.0.27",
         "module-alias": "^2.2.2",
         "moment": "^2.29.4",
         "mongoose": "^6.7.5",
