--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,5 @@
     }
   },
   "include": ["src/**/*.ts", "src/**/*.json", ".env"],
-  "exclude": ["node_modules", "http", "logs", "src/tests"]
+  "exclude": ["node_modules", "http", "logs", "src/tests", "client", "dist"]
 }
