refactor: rebase code structure

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,12 +6,13 @@ on:
       - main
     paths-ignore:
       - ".vscode/**"
-      - ".infrastructure/**"
       - "client/**"
       - "public/**"
       - "docs/**"
       - ".gitingore"
       - "**.md"
+      - "resources/**"
+      - "**.json"
 
 jobs:
   push_to_registries:
@@ -47,7 +48,7 @@ jobs:
 
       - name: Build and push Docker images
         uses: docker/build-push-action@v3
-        working-directory: $GITHUB_WORKSPACE/server
+        # working-directory: $GITHUB_WORKSPACE/server
         with:
           context: .
           file: ./docker/Dockerfile.local
