--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,7 +2,7 @@ FROM node:18-alpine as development
 
 WORKDIR /app
 
-COPY /server .
+COPY . .
 
 RUN yarn install
 
@@ -16,7 +16,7 @@ RUN chown -R node:node /app
 
 USER node
 
-COPY --chown=node:node /server/package.json /server/yarn.lock ./
+COPY --chown=node:node ./package.json ./yarn.lock ./
 
 COPY --chown=node:node --from=development /app/dist /app/dist
 
