--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -16,6 +16,7 @@ RUN chown -R node:node /app
 
 USER node
 
+
 COPY --chown=node:node ./package.json ./yarn.lock ./
 
 COPY --chown=node:node --from=development /app/dist /app/dist
@@ -27,5 +28,5 @@ LABEL "org.opencontainers.image.authors"="Thuong Truong <"
 LABEL "org.opencontainers.image.version"="1.0"
 LABEL "org.opencontainers.image.description"="Official Docker Image of Metasave API application"
 LABEL "org.opencontainers.image.licenses"="MIT"
-LABEL "org.opencontainers.image.source"="https://github.com/thuongtruong1009/metasave/server"
-LABEL "org.opencontainers.image.documentation"="https://thuongtruong1009.github.io/docs"
+LABEL "org.opencontainers.image.source"="https://github.com/thuongtruong1009/metasave"
+LABEL "org.opencontainers.image.documentation"="https://github.com/thuongtruong1009/metasave/blob/main/README.md"
