--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     restart: unless-stopped
     environment:
       MONGO_URL: mongodb://mongo/${DB_NAME}
-    command: yarn start:dev
+    command: npm run start:dev
 
   app2:
     <<: *app
@@ -31,7 +31,7 @@ services:
     ports:
       - ${APP_PORT}:80
     environment:
-      - NGINX_HOST=127.0.01,localhost,0.0.0.0
+      - NGINX_HOST=127.0.0.1,localhost,0.0.0.0
       - NGINX_PORT=80
       - APP_HOST_1=app
       - APP_HOST_2=app2
